--- a/packages/medusa-marketplace/package.json
+++ b/packages/medusa-marketplace/package.json
@@ -34,14 +34,14 @@
     "prepublishOnly": "medusa plugin:build"
   },
   "devDependencies": {
-    "@medusajs/admin-sdk": "2.11.2",
-    "@medusajs/cli": "2.11.2",
-    "@medusajs/framework": "2.11.2",
-    "@medusajs/icons": "2.11.2",
-    "@medusajs/medusa": "2.11.2",
-    "@medusajs/test-utils": "2.11.2",
-    "@medusajs/ui": "4.0.25",
-    "@swc/core": "1.5.7",
+    "@medusajs/admin-sdk": "^2.11.2",
+    "@medusajs/cli": "^2.11.2",
+    "@medusajs/framework": "^2.11.2",
+    "@medusajs/icons": "^2.11.2",
+    "@medusajs/medusa": "^2.11.2",
+    "@medusajs/test-utils": "^2.11.2",
+    "@medusajs/ui": "^4.0.25",
+    "@swc/core": "^1.5.7",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
@@ -54,13 +54,13 @@
     "yalc": "^1.0.0-pre.53"
   },
   "peerDependencies": {
-    "@medusajs/admin-sdk": "2.11.2",
-    "@medusajs/cli": "2.11.2",
-    "@medusajs/framework": "2.11.2",
-    "@medusajs/icons": "2.11.2",
-    "@medusajs/medusa": "2.11.2",
-    "@medusajs/test-utils": "2.11.2",
-    "@medusajs/ui": "4.0.25"
+    "@medusajs/admin-sdk": "^2.11.2",
+    "@medusajs/cli": "^2.11.2",
+    "@medusajs/framework": "^2.11.2",
+    "@medusajs/icons": "^2.11.2",
+    "@medusajs/medusa": "^2.11.2",
+    "@medusajs/test-utils": "^2.11.2",
+    "@medusajs/ui": "^4.0.25"
   },
   "engines": {
     "node": ">=20"
