--- a/examples/marketplace-wildberries/medusa/package.json
+++ b/examples/marketplace-wildberries/medusa/package.json
@@ -17,12 +17,13 @@
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
     "dev": "yarn predev && medusa develop",
-    "predev": "medusa plugin:add @gorgo/medusa-marketplace-wildberries",
+    "predev": "medusa plugin:add @gorgo/medusa-marketplace && medusa plugin:add @gorgo/medusa-marketplace-wildberries",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@gorgo/medusa-marketplace": "file:.yalc/@gorgo/medusa-marketplace",
     "@gorgo/medusa-marketplace-wildberries": "file:.yalc/@gorgo/medusa-marketplace-wildberries",
     "@medusajs/admin-sdk": "2.11.3",
     "@medusajs/cli": "2.11.3",
