--- a/examples/marketplace-wildberries/medusa/package.json
+++ b/examples/marketplace-wildberries/medusa/package.json
@@ -16,7 +16,7 @@
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "dev": "yarn predev && medusa develop",
+    "dev": "yarn predev && yarn && medusa develop",
     "predev": "medusa plugin:add @gorgo/medusa-marketplace && medusa plugin:add @gorgo/medusa-marketplace-wildberries",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
