--- a/examples/fulfillment-apiship/medusa/package.json
+++ b/examples/fulfillment-apiship/medusa/package.json
@@ -27,14 +27,14 @@
     "tunnel": "lt --port 9000 --subdomain medusa-apiship"
   },
   "dependencies": {
-    "@gorgo/medusa-fulfillment-apiship": "file:.yalc/@gorgo/medusa-fulfillment-apiship",
-    "@medusajs/admin-sdk": "2.12.5",
-    "@medusajs/cli": "2.12.5",
-    "@medusajs/framework": "2.12.5",
-    "@medusajs/medusa": "2.12.5"
+    "@gorgo/medusa-fulfillment-apiship": "latest",
+    "@medusajs/admin-sdk": "2.13.1",
+    "@medusajs/cli": "2.13.1",
+    "@medusajs/framework": "2.13.1",
+    "@medusajs/medusa": "2.13.1"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.12.5",
+    "@medusajs/test-utils": "2.13.1",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
